2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_action_handle_key_press):
	Patch from Robin Stocker <robin@nibor.org> to make space
	work to play/pause in more situations (Closes: #570834)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* gtk-doc.make: Remove generated file

2009-02-07  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/totem-docs.sgml:
	* docs/reference/totem-docs.xml:
	* docs/reference/totem-sections.txt:
	* src/plugins/totem-plugin.c:
	* src/plugins/totem-plugin.h:
	* src/totem-cell-renderer-video.c
	(totem_cell_renderer_video_class_init):
	* src/totem-cell-renderer-video.h:
	* src/totem-interface.c:
	* src/totem-object.c (totem_object_class_init):
	* src/totem-video-list.c (totem_video_list_class_init):
	* src/totem-video-list.h:
	* src/totem.h: Documentation updates and fixes: all documented and
	plugin-visible API is now listed in the documentation, and the
	section titles/descriptions have all been updated. The documentation
	layout has been tidied up, and recent gtk-doc features have been
	taken advantage of
	(http://live.gnome.org/DocumentationProject/GtkDocGnomeGoal).

2009-02-07  Philip Withnall  <philip@tecnocode.co.uk>

	* Makefile.am:
	* configure.in:
	* docs/Makefile.am:
	* docs/reference/Makefile.am:
	* docs/reference/totem-docs.sgml:
	* docs/reference/totem-sections.txt:
	* docs/reference/totem.types:
	* docs/reference/version.xml.in:
	* gtk-doc.make: Add gtk-doc support to Totem, to document the new
	libtotem_main.la noinst library. The documentation's aimed at plugin
	authors. (Closes: #570861)

2009-02-07  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/plugins/totem-plugin.c:
	* src/plugins/totem-plugin.h:
	* src/totem-object.c (reset_seek_status), (totem_action_error),
	(totem_action_error_and_exit), (totem_action_save_size),
	(totem_action_save_state), (totem_action_wait_force_exit),