@@ -1,5 +1,11 @@
 2009-02-09  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-object.c (on_video_button_press_event):
+	Patch from Robin Stocker <robin@nibor.org> to focus the
+	video widget when it's been clicked (Closes: #570836)
+
+2009-02-09  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-object.c (totem_action_handle_key_press):
 	Patch from Robin Stocker <robin@nibor.org> to make space
 	work to play/pause in more situations (Closes: #570834)
